<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/oscurofondo"
    tools:context=".ActiActivity2">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="489dp"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/migym" />


        <RelativeLayout
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:id="@+id/foto"
            android:layout_marginTop="40dp"
            android:background="@drawable/gradient_animacion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


                <androidx.cardview.widget.CardView
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    app:cardCornerRadius="70dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/gradient_animacion"

                    >


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/imgMenu"
                        android:src="@drawable/noimage"
                        android:scaleType="centerCrop"></ImageView>

                </androidx.cardview.widget.CardView>
        </RelativeLayout>




        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="760dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/foto"
            android:background="@drawable/menucard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="4dp"
                android:background="@color/azulclaro2"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:gravity="center">


                <androidx.cardview.widget.CardView
                    android:layout_width="140dp"
                    android:layout_height="110dp"
                    android:id="@+id/cardInicio"
                    app:cardBackgroundColor="@color/oscurofondo"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="30dp"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">


                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:src="@drawable/inicio"
                            android:layout_marginTop="10dp"

                            android:layout_gravity="center"></ImageView>


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/white"
                            android:text="@string/txtInicio"
                            android:textSize="20sp"
                            android:gravity="center"></TextView>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="140dp"
                    android:layout_marginLeft="30dp"
                    android:id="@+id/cardPerfil"
                    android:layout_height="110dp"
                    app:cardBackgroundColor="@color/oscurofondo"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">


                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:src="@drawable/perfil"
                            android:layout_marginTop="10dp"

                            android:layout_gravity="center"></ImageView>


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/white"
                            android:text="@string/txtPerfil"
                            android:textSize="20sp"
                            android:gravity="center"></TextView>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:gravity="center">


                <androidx.cardview.widget.CardView
                    android:layout_width="140dp"
                    android:layout_height="110dp"
                    android:id="@+id/cardUsuarios"
                    app:cardBackgroundColor="@color/oscurofondo"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="30dp"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">


                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:src="@drawable/usuarios"
                            android:layout_marginTop="10dp"

                            android:layout_gravity="center"></ImageView>


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/white"
                            android:text="@string/txtUsuarios"
                            android:textSize="20sp"
                            android:gravity="center"></TextView>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="140dp"
                    android:layout_marginLeft="30dp"
                    android:id="@+id/cardActi"
                    android:layout_height="110dp"
                    app:cardBackgroundColor="@color/oscurofondo"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="30dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">


                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:src="@drawable/actividades"
                            android:layout_marginTop="10dp"

                            android:layout_gravity="center"></ImageView>


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/white"
                            android:text="@string/txtActividades"
                            android:textSize="20sp"
                            android:gravity="center"></TextView>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:gravity="center">


                <androidx.cardview.widget.CardView
                    android:layout_width="140dp"
                    android:layout_height="110dp"
                    android:id="@+id/cardLocation"
                    app:cardBackgroundColor="@color/oscurofondo"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="30dp"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">


                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:src="@drawable/plan"
                            android:layout_marginTop="10dp"

                            android:layout_gravity="center"></ImageView>


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/white"
                            android:text="@string/txtPlanEntrenamiento"
                            android:textSize="20sp"
                            android:gravity="center"></TextView>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="140dp"
                    android:layout_marginLeft="30dp"
                    android:id="@+id/cardSalir"
                    android:layout_height="110dp"
                    app:cardBackgroundColor="@color/oscurofondo"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="30dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">


                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:src="@drawable/logout"
                            android:layout_marginTop="10dp"

                            android:layout_gravity="center"></ImageView>


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/white"
                            android:text="@string/txtSalir"
                            android:textSize="20sp"
                            android:gravity="center"></TextView>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>


    </LinearLayout>





























































</androidx.constraintlayout.widget.ConstraintLayout>